# bobscheme

./: .gitignore  .hgignore  Makefile  README.md  README.rst  README.txt  maketags.sh  pyproject.toml  setup.py
.github/workflows/: test.yml
barevm/: CMakeLists.txt  Makefile  SConstruct  barevm  basicobjects.cpp  builtins.cpp  bytecode.h  main.cpp  maketags.sh  utils.cpp
barevm/include/: builtins.c  builtins.h  bytecode.h  cutils.h  dstring.h  intern.h  mem.h  object.h  objectallocator.h  vm.h
barevm/src/: CMakeLists.txt  bobobject.cpp  bobobject.h  builtins.c  bytecode.c  dstring.c  environment.cpp  environment.h  hashtable.c  intern.c  main.c  main.cpp  mem.c  object.c  objectallocator.c  vm.c  vm.cpp  vm.h
barevm/tests_unit/: CMakeLists.txt  unittest_example.cpp
barevm/utils/: dstring.c  hashtable.h  stack.c
benchmark/: bench1.py
bob/: bobparser.py  builtins.py  bytecode.py  cmd.py  compiler.py  environment.py  expr.py  interpreter.py  lexer.py  py3compat.py  utils.py  vm.py  wasmcompiler.py
doc/: bob_bytecode_reference.html  bob_bytecode_reference.rst  bob_getting_started.html  bob_getting_started.rst  todo.txt
doc/diagrams/: README.txt  bob_diagrams.odg  bob_diagrams.vsd
examples/: README  bigalloc.scm  compile_file.py  compile_to_wasm.py  disassemble.py  interactive.py  interpret_file.py  longloop.scm  run_compiled.py  simple_func.scm  wasmloader.html  wasmrunner.js  z.scm  z2.scm
experimental/: README.txt
tests_full/: README.rst  README.txt  test_barevm.py  test_interpreter.py  test_vm_compiler.py  test_wasm_compiler.py  testcases_utils.py
(+107 files in other folders)
